--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "my-v0-project",
+  "name": "hot-potato-game",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "build": "next build",
     "dev": "next dev",
@@ -49,9 +52,9 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
-    "react": "^19",
+    "react": "^18.3.1",
     "react-day-picker": "9.8.0",
-    "react-dom": "^19",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
@@ -73,8 +76,8 @@
     "@types/chai-as-promised": "^7.1.8",
     "@types/mocha": "^10.0.10",
     "@types/node": "^24.3.0",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "chai": "^4.5.0",
     "dotenv": "^17.2.1",
     "hardhat": "^2.26.3",
@@ -84,7 +87,7 @@
     "tailwindcss": "^4.1.9",
     "ts-node": "^10.9.2",
     "tw-animate-css": "1.3.3",
-    "typescript": "~5.0.4",
+    "typescript": "~5.3.3",
     "viem": "^1.21.4"
   }
 }
