Fix TypeScript compilation: update tsconfig to exclude scripts, fix viem imports in check-balance script

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,8 +31,14 @@
   "include": [
     "next-env.d.ts",
     ".next/types/**/*.ts",
-    "**/*.ts",
-    "**/*.tsx"
+    "app/**/*.ts",
+    "app/**/*.tsx",
+    "lib/**/*.ts",
+    "lib/**/*.tsx",
+    "components/**/*.ts",
+    "components/**/*.tsx",
+    "hooks/**/*.ts",
+    "hooks/**/*.tsx"
   ],
   "exclude": [
     "node_modules"
